--- a/index.html
+++ b/index.html
@@ -6,20 +6,34 @@
     <title>Trivia Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <script src="/assets/javascript/app.js"></script>
 </head>
 <body>
     <div class="container">
-        <div id="Nav" class="row">
+        <div class="row">
+            <div class="heading">
+            <h2>this will be heading</h2>
+            </nav>
         </div>
         <div class="row">
+
             <div class="Q1">
-                <div class="Question"></div>
-                <div class="A1"></div>
-                <div class="A2"></div>
-                <div class="A3"></div>
-                <div class="A4"></div>
+
+                <div class="jumbotron">
+
+                    <div class="Question"><h2>this will be where i put my questions</h2></div>
+
+                    <span class="answers">
+
+                        <div class="A1">first answer</div>
+                        <div class="A2">second answer</div>
+                        <div class="A3">third answer</div>
+                        <div class="A4">fourth answer</div>
+
+                    </span>    
+
+                </div>
             </div>
         </div>
     </div>
