--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <script src="/assets/javascript/app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="assets/javascript/app.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="heading">
-            <h2>this will be heading</h2>
+            <h2>Trivia</h2>
             </nav>
         </div>
         <div class="row">
@@ -21,17 +22,18 @@
             <div class="Q1">
 
                 <div class="jumbotron">
+                    <button id="start">start</button>
 
-                    <div class="Question"><h2>this will be where i put my questions</h2></div>
+                    <div id="Question"></div>
 
-                    <span class="answers">
+                    <div class="answers">
 
-                        <div class="A1">first answer</div>
-                        <div class="A2">second answer</div>
-                        <div class="A3">third answer</div>
-                        <div class="A4">fourth answer</div>
+                        <div class="A1"><h4>first answer</h4></div>
+                        <div class="A2"><h4>second answer</h4></div>
+                        <div class="A3"><h4>third answer</h4></div>
+                        <div class="A4"><h4>fourth answer</h4></div>
 
-                    </span>    
+                    </div>    
 
                 </div>
             </div>
