--- a/index.html
+++ b/index.html
@@ -12,29 +12,30 @@
 </head>
 <body>
     <div class="container">
+
         <div class="row">
+
             <div class="heading">
+
             <h2>Trivia</h2>
-            </nav>
+        
         </div>
+
         <div class="row">
 
             <div class="Q1">
 
                 <div class="jumbotron">
+
                     <button id="start">start</button>
+                    <div class="time"></div>
 
                     <div id="Question"></div>
 
-                    <div class="answers">
+                        <div class="answers">
 
-                        <div class="A1"><h4>first answer</h4></div>
-                        <div class="A2"><h4>second answer</h4></div>
-                        <div class="A3"><h4>third answer</h4></div>
-                        <div class="A4"><h4>fourth answer</h4></div>
-
-                    </div>    
-
+                        </div>  
+                    </div>      
                 </div>
             </div>
         </div>
