--- a/index.html
+++ b/index.html
@@ -17,22 +17,25 @@
 
             <div class="heading">
 
-            <h2>Trivia</h2>
+            <h1>Trivia</h1>
         
         </div>
 
         <div class="row">
 
-            <div class="Q1">
+                <button id="start">start</button>
 
                 <div class="jumbotron">
 
-                    <button id="start">start</button>
-                    <div class="time"></div>
+                    <div id="Quest"></div>
 
-                    <div id="Question"></div>
+                     <div id="choices"></div>
 
-                        <div class="answers">
+                     <div class="time"></div>
+
+                     <div class="win"></div>
+
+                     <div class="loss"></div>
 
                         </div>  
                     </div>      
