--- a/index.html
+++ b/index.html
@@ -23,22 +23,23 @@
 
         <div class="row">
 
-                <button id="start">start</button>
+                <button class="btn btn-primary" id="start"><h1 id="strt">start</h1></button>
 
                 <div class="jumbotron">
 
-                    <div id="Quest"></div>
+                    <div class="QSTN" id="Quest"></div>
 
                      <div id="choices"></div>
 
-                     <div class="time"></div>
+                     <div id="time"></div>
 
-                     <div class="win"></div>
+                     <div id="win"></div>
 
-                     <div class="loss"></div>
+                     <div id="loss"></div>
 
                         </div>  
-                    </div>      
+                    </div>
+                    <div class="row"></div>      
                 </div>
             </div>
         </div>
