--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <div class="heading">
 
-            <h1>Trivia</h1>
+            <h1>Automotive Trivia</h1>
         
         </div>
 
