--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
 
                      <div id="loss"></div>
 
-                        </div>  
-                    </div>
+                     <div id="score"></div>
+
+                    </div> 
+
+        </div>
                     <div class="row"></div>      
                 </div>
             </div>
